add setting: Auto play control

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -3,6 +3,10 @@
     <PreferenceCategory
         android:title="@string/pref_title_settings">
         <SwitchPreference
+            android:title="@string/pref_title_auto_play"
+            android:defaultValue="true"
+            android:key="@string/pref_key_auto_play" />
+        <SwitchPreference
             android:title="@string/pref_title_recommendations"
             android:defaultValue="true"
             android:key="@string/pref_key_recommendations" />
