change focus category text color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,8 +19,9 @@
     <color name="background_gradient_end">#DDDDDD</color>
     <color name="fastlane_background">#0096a6</color>
     <color name="search_opaque">#ffaa3f</color>
-    <color name="selected_background">#ffaa3f</color>
+    <color name="selected_background">#e08040</color>
     <color name="current_preference_background">#3f3fff</color>
+    <color name="category_text">#404070</color>
 
     <color name="default_background">#0096a6</color>
     <color name="icon_background">#4A4F51</color>
