--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -6,12 +6,12 @@
             android:title="@string/pref_title_auto_play"
             android:defaultValue="true"
             android:key="@string/pref_key_auto_play" />
-        <SwitchPreference
-            android:title="@string/pref_title_recommendations"
-            android:defaultValue="true"
-            android:key="@string/pref_key_recommendations" />
+<!--        <SwitchPreference-->
+<!--            android:title="@string/pref_title_recommendations"-->
+<!--            android:defaultValue="true"-->
+<!--            android:key="@string/pref_key_recommendations" />-->
     </PreferenceCategory>
-    <Preference
-        android:key="@string/pref_key_login"
-        android:title="@string/pref_title_login" />
+<!--    <Preference-->
+<!--        android:key="@string/pref_key_login"-->
+<!--        android:title="@string/pref_title_login" />-->
 </PreferenceScreen>
