--- a/app/src/main/res/layout/onboarding.xml
+++ b/app/src/main/res/layout/onboarding.xml
@@ -16,6 +16,6 @@
 
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/onboarding_fragment"
-    android:name="com.cw.tv_yt.ui.OnboardingFragment"
+    android:name="com.cw.tv_yt.ui.misc.OnboardingFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
