--- a/app/src/main/res/layout/select_link_src_grid.xml
+++ b/app/src/main/res/layout/select_link_src_grid.xml
@@ -16,6 +16,6 @@
 
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/select_category_fragment"
-    android:name="com.cw.tv_yt.ui.SelectLinkSrcFragment"
+    android:name="com.cw.tv_yt.ui.link_src.SelectLinkSrcFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
