--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.cw.tv_yt.ui.SettingsFragment"
+        android:name="com.cw.tv_yt.ui.options.setting.SettingsFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></fragment>
 </RelativeLayout>
