--- a/app/src/main/res/layout/vertical_grid.xml
+++ b/app/src/main/res/layout/vertical_grid.xml
@@ -16,6 +16,6 @@
 
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/vertical_grid_fragment"
-    android:name="com.cw.tv_yt.ui.VerticalGridFragment"
+    android:name="com.cw.tv_yt.ui.options.vertical_grid.VerticalGridFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
