2022-02-18 set default link source and add category

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,7 +12,7 @@
         <item name="searchOrbViewStyle">@style/ReplaceSearchOrbView</item>
     </style>
     <style name="ReplaceSearchOrbView" parent="Widget.Leanback.SearchOrbViewStyle">
-        <item name="searchOrbIcon">@drawable/refresh_40</item>
+        <item name="searchOrbIcon">@drawable/ic_input_add</item>
     </style>
 
     <!--search orb location-->
