2022-03-01 add Toast for Import and Show YouTube duration in Define

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -6,7 +6,7 @@
             android:title="@string/pref_title_auto_play"
             android:defaultValue="true"
             android:key="@string/pref_key_auto_play" />
-        <SwitchPreference
+        <Preference
             android:title="@string/set_default"
             android:defaultValue="true"
             android:key="@string/pref_key_renew" />
