--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -14,10 +14,14 @@
             android:title="@string/pref_title_show_duration"
             android:defaultValue="false"
             android:key="@string/pref_key_show_duration" />
+        <SwitchPreference
+            android:title="@string/sel_file_mgr_app"
+            android:defaultValue="false"
+            android:key="@string/pref_key_sel_file_mgr_app" />
         <Preference
             android:title="@string/set_default"
             android:defaultValue="true"
-            android:key="@string/pref_key_renew" />
+            android:key="@string/pref_key_set_default" />
 <!--        <SwitchPreference-->
 <!--            android:title="@string/pref_title_recommendations"-->
 <!--            android:defaultValue="true"-->
