--- a/app/src/main/res/layout/confirm_gdrive_json.xml
+++ b/app/src/main/res/layout/confirm_gdrive_json.xml
@@ -25,7 +25,7 @@
 			android:focusable="true"
 			android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
 			android:drawableStart="@android:drawable/ic_menu_close_clear_cancel"
-	        android:text="@string/edit_note_button_back" />
+	        android:text="@string/button_cancel" />
 	    <Button
 	        android:id="@+id/confirm_gdrive_json"
 	        android:layout_width="0dp"
@@ -39,6 +39,6 @@
 			android:focusable="true"
 			android:drawableLeft="@android:drawable/ic_menu_save"
 			android:drawableStart="@android:drawable/ic_menu_save"
-	        android:text="@string/edit_note_button_save" />
+	        android:text="@string/button_ok" />
 	</LinearLayout>
 </LinearLayout>
