2022-05-07 apply data package folder

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -16,7 +16,7 @@
             android:key="@string/pref_key_show_duration" />
         <SwitchPreference
             android:title="@string/sel_file_mgr_app"
-            android:defaultValue="false"
+            android:defaultValue="true"
             android:key="@string/pref_key_sel_file_mgr_app" />
         <Preference
             android:title="@string/set_default"
